# rust-server-starter

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: health_check.rs
